--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">EvillageDemoApp</string>
     <string name="main_text">Provide your email address in order to register an account</string>
     <string name="register">Register</string>
+    <string name="add_to_basket">Add to basket</string>
+    <string name="product_picture">product picture</string>
+    <string name="go_to_product_overview">Go to product overview</string>
 </resources>
