--- a/clangnotifications/src/main/res/values/strings.xml
+++ b/clangnotifications/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="done">Done</string>
     <string name="email_hint">Enter email</string>
     <string name="submit">Submit</string>
-    <string name="saved_email_key">saved_email_key</string>
+    <string name="saved_id_key">saved_id_key</string>
 </resources>
