--- a/clangnotifications/src/main/res/values/strings.xml
+++ b/clangnotifications/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">embeddedNotifications</string>
-    <string name="thank_you">%s\n, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-        dolor. Aenean massa.
-    </string>
+    <string name="thank_you">Thank you for submitting our poll, we value your opinion</string>
     <string name="done">Done</string>
     <string name="email_hint">Enter email</string>
     <string name="submit">Submit</string>
