--- a/clangnotifications/src/main/res/values/strings.xml
+++ b/clangnotifications/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">embeddedNotifications</string>
-    <string name="thank_you">Thank you for submitting our poll, we value your opinion</string>
+    <string name="thank_you">You\'re all done, have a 🍪</string>
     <string name="done">Done</string>
     <string name="email_hint">Enter email</string>
     <string name="submit">Submit</string>
