EVNS-29: WIP, adding properties interactor in current setup. Upgrading gradle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="password_hint">Enter password</string>
     <string name="login">Login</string>
     <string name="poll">Take a poll</string>
+    <string name="property">Set property</string>
 </resources>
