--- a/clangnotifications/src/main/res/values/strings.xml
+++ b/clangnotifications/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="email_hint">Enter email</string>
     <string name="submit">Submit</string>
     <string name="saved_id_key">saved_id_key</string>
+    <string name="ok">OK</string>
 </resources>
